feat: tradução para PT-PT, novos filtros de pesquisa e melhorias no rodapé
- Tradução de todos os comentários do código para Português Europeu.
- Adição de barra de pesquisa secundária com filtros por categoria e ordenação.
- Atualização da designação oficial do curso no rodapé.
- Adição de copyright personalizado "peachiu ✿" com link para o GitHub.
- Melhorias de design no Hero e cartões de produto (clicáveis).
- Sincronização da lógica de filtragem PHP no backend.

--- a/website/index.html
+++ b/website/index.html
@@ -113,8 +113,8 @@
 
     <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
-            <p class="mb-1">&copy; 2026 Second Avenue. Desenvolvido por <span class="fw-bold">peachiu</span>.</p>
-            <small class="text-white-50">PAP - Curso Profissional de Gestão e Programação de Sistemas Informáticos</small>
+            <p class="mb-1">&copy; 2026 Second Avenue. Desenvolvido por <a href="https://github.com/peachiu" class="text-white text-decoration-none fw-bold">peachiu ✿</a></p>
+            <small class="text-white-50">PAP - Curso Profissional Técnico de Gestão e Programação de Sistemas Informáticos</small>
         </div>
     </footer>
 
